posiGen_FullsendBox/src/objects/Project_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Comment_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comment_Type__c</fullName>
        <label>Comment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Utility Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Comments</relationshipLabel>
        <relationshipName>Project_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Comment</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Project Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>